<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/text_ok" />

    <Button
        android:id="@+id/buttonleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/turn_left" />

    <Button
        android:id="@+id/buttonright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/turn_right" />

    <schedule.sumdu.edu.ua.schedulesumdu.components.MonthView
        android:id="@+id/monthview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_ok"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonleft" />

    <TextView
        android:id="@+id/textmonthyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonleft"
        android:layout_alignBottom="@+id/buttonleft"
        android:layout_toLeftOf="@+id/buttonright"
        android:layout_toRightOf="@+id/buttonleft"
        android:gravity="center"
        android:text="@string/default_date" />
 
</RelativeLayout>
